--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,11 @@
 ---
 ---
 
-@article{2018IEEE-TAC,
-  abbr={IEEE-TAC},
+@ARTICLE{2018IEEE-TAC,
+  abbr={IEEE TAC},
   author={Shinohara, Takumi and Namerikawa, Toru and Qu, Zhihua},
   journal={IEEE Transactions on Automatic Control}, 
-  title={Resilient reinforcement in secure state estimation against sensor attacks with a priori information}, 
+  title={Resilient Reinforcement in Secure State Estimation Against Sensor Attacks With A Priori Information}, 
   year={2019},
   volume={64},
   number={12},
@@ -13,4 +13,136 @@
   doi={10.1109/TAC.2019.2904438},
   html={https://ieeexplore.ieee.org/document/8664617},
   selected={true}
+}
+
+@INPROCEEDINGS{2018ACC,
+  abbr={ACC},
+  author={Shinohara, Takumi and Namerikawa, Toru},
+  booktitle={2018 Annual American Control Conference (ACC)}, 
+  title={Reach Set-based Attack Resilient State Estimation against Omniscient Adversaries}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={5813--5818},
+  doi={10.23919/ACC.2018.8431213},
+  html={https://ieeexplore.ieee.org/abstract/document/8431213}
+}
+
+@article{2017JCMSI,
+  abbr={SICE JCMSI},
+  author = {Takumi Shinohara and Toru Namerikawa},
+  title = {On the Vulnerabilities Due to Manipulative Zero-Stealthy Attacks in Cyber-Physical Systems},
+  journal = {SICE Journal of Control, Measurement, and System Integration},
+  volume = {10},
+  number = {6},
+  pages = {563--570},
+  year = {2017},
+  publisher = {Taylor & Francis},
+  doi = {10.9746/jcmsi.10.563},
+  html = {https://www.tandfonline.com/doi/abs/10.9746/jcmsi.10.563}
+}
+
+@INPROCEEDINGS{2017CCTA,
+  abbr={IEEE CCTA},
+  author={Shinohara, Takumi and Namerikawa, Toru},
+  booktitle={2017 IEEE Conference on Control Technology and Applications (CCTA)}, 
+  title={Manipulative zero-stealthy attacks in cyber-physical systems: Existence space of feasible attack objectives}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={1123--1128},
+  doi={10.1109/CCTA.2017.8062609},
+  html={https://ieeexplore.ieee.org/abstract/document/8062609}
+}
+
+@article{2022IET-CTA,
+  abbr={IET CTA},
+  author = {Takumi Shinohara and Toru Namerikawa},
+  title = {Distributed Secure State Estimation with a Priori Sparsity Information},
+  journal = {IET Control Theory and Applications},
+  volume = {16},
+  number = {11},
+  pages = {1086--1097},
+  year = {2022},
+  publisher = {Institution of Engineering and Technology},
+  doi = {10.1049/cth2.12287},
+  html = {https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/cth2.12287}
+}
+
+@article{2018JCMSI,
+  abbr={SICE JCMSI},
+  author = {Takumi Shinohara and Toru Namerikawa},
+  title = {Reach Set-Based Secure State Estimation against Sensor Attacks with Interval Hull Approximation},
+  journal = {SICE Journal of Control, Measurement, and System Integration},
+  volume = {11},
+  number = {5},
+  pages = {399--408},
+  year = {2018},
+  publisher = {Taylor & Francis},
+  doi = {10.9746/jcmsi.11.399},
+  html = {https://www.tandfonline.com/doi/pdf/10.9746/jcmsi.11.399}
+}
+
+@INPROCEEDINGS{2016SICE-AC,
+  abbr={SICE AC},
+  author={Shinohara, Takumi and Namerikawa, Toru},
+  booktitle={2016 55th Annual Conference of the Society of Instrument and Control Engineers of Japan (SICE)}, 
+  title={SLAM for a small UAV with compensation for unordinary observations and convergence analysis}, 
+  year={2016},
+  volume={},
+  number={},
+  pages={1252--1257},
+  doi={10.1109/SICE.2016.7749190},
+  html={https://ieeexplore.ieee.org/abstract/document/7749190}
+}
+
+@article{2016T-SICE,
+  title={Detection of Replay Attack on Smart Grid with Code Signal and Bargaining Game},
+  author={Takashi Irita, Takumi Shinohara, and Toru Namerikawa},
+  journal={Transactions of the Society of Instrument and Control Engineers},
+  volume={52},
+  number={9},
+  pages={498--506},
+  year={2016},
+  doi={10.9746/sicetr.52.498},
+  html={https://www.jstage.jst.go.jp/article/sicetr/52/9/52_498/_article/-char/en}
+}
+
+@article{2024Automatica,
+  abbr={Automatica},
+  title = {Optimal resilient sensor placement problem for secure state estimation},
+  journal = {Automatica},
+  volume = {160},
+  pages = {111454},
+  year = {2024},
+  issn = {0005-1098},
+  doi = {https://doi.org/10.1016/j.automatica.2023.111454},
+  html = {https://www.sciencedirect.com/science/article/pii/S0005109823006210},
+  author = {Takumi Shinohara and Toru Namerikawa},
+  keywords = {Secure state estimation, Optimal sensor placement, Eigenvalue and sparse observability, Polynomial time algorithm},
+}
+
+@INPROCEEDINGS{2023ACC,
+  abbr={ACC},  
+  author={Shinohara, Takumi and Namerikawa, Toru},
+  booktitle={2023 American Control Conference (ACC)}, 
+  title={Secure State Estimation for Multi-Agent Systems: On the Relationship between the Number of Agents and System Resilience}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1006-1011},
+  doi={10.23919/ACC55779.2023.10156420},
+  html={https://ieeexplore.ieee.org/abstract/document/10156420}
+}
+
+@article{2018T-SICE,
+  title={Perfect Stealthy Attacks in Cyber-physical Systems},
+  author={Takumi Shinohara and Toru Namerikawa},
+  journal={Transactions of the Society of Instrument and Control Engineers},
+  volume={54},
+  number={3},
+  pages={309--319},
+  year={2018},
+  doi={10.9746/sicetr.54.309},
+  html={https://www.jstage.jst.go.jp/article/sicetr/54/3/54_309/_article/-char/en}
 }
