--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -120,6 +120,7 @@
   html = {https://www.sciencedirect.com/science/article/pii/S0005109823006210},
   author = {Takumi Shinohara and Toru Namerikawa},
   keywords = {Secure state estimation, Optimal sensor placement, Eigenvalue and sparse observability, Polynomial time algorithm},
+  selected={true}
 }
 
 @INPROCEEDINGS{2023ACC,
@@ -132,7 +133,8 @@
   number={},
   pages={1006-1011},
   doi={10.23919/ACC55779.2023.10156420},
-  html={https://ieeexplore.ieee.org/abstract/document/10156420}
+  html={https://ieeexplore.ieee.org/abstract/document/10156420},
+  selected={true}
 }
 
 @article{2018T-SICE,
