--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -98,7 +98,7 @@
 
 @article{2016T-SICE,
   title={Detection of Replay Attack on Smart Grid with Code Signal and Bargaining Game},
-  author={Takashi Irita, Takumi Shinohara, and Toru Namerikawa},
+  author={Irita, Takashi and Shinohara, Takumi and Namerikawa, Toru},
   journal={Transactions of the Society of Instrument and Control Engineers},
   volume={52},
   number={9},
