--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,54 @@
 ---
 ---
 
-@ARTICLE{2018IEEE-TAC,
+@article{2024Automatica,
+  abbr={Automatica},
+  title = {Optimal resilient sensor placement problem for secure state estimation},
+  journal = {Automatica},
+  volume = {160},
+  pages = {111454},
+  year = {2024},
+  issn = {0005-1098},
+  doi = {https://doi.org/10.1016/j.automatica.2023.111454},
+  html = {https://www.sciencedirect.com/science/article/pii/S0005109823006210},
+  author = {Takumi Shinohara and Toru Namerikawa},
+  keywords = {Secure state estimation, Optimal sensor placement, Eigenvalue and sparse observability, Polynomial time algorithm},
+  selected={true}
+}
+
+@INPROCEEDINGS{2023ACC,
+  abbr={ACC},  
+  author={Shinohara, Takumi and Namerikawa, Toru},
+  booktitle={2023 American Control Conference (ACC)}, 
+  title={Secure state estimation for multi-agent systems: On the relationship between the number of agents and system resilience}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1006-1011},
+  doi={10.23919/ACC55779.2023.10156420},
+  html={https://ieeexplore.ieee.org/abstract/document/10156420},
+  selected={true}
+}
+
+@article{2022IET-CTA,
+  abbr={IET CTA},
+  author = {Takumi Shinohara and Toru Namerikawa},
+  title = {Distributed secure state estimation with a priori sparsity information},
+  journal = {IET Control Theory and Applications},
+  volume = {16},
+  number = {11},
+  pages = {1086--1097},
+  year = {2022},
+  publisher = {Institution of Engineering and Technology},
+  doi = {10.1049/cth2.12287},
+  html = {https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/cth2.12287}
+}
+
+@ARTICLE{2019IEEE-TAC,
   abbr={IEEE TAC},
   author={Shinohara, Takumi and Namerikawa, Toru and Qu, Zhihua},
   journal={IEEE Transactions on Automatic Control}, 
-  title={Resilient Reinforcement in Secure State Estimation Against Sensor Attacks With A Priori Information}, 
+  title={Resilient reinforcement in secure state estimation against sensor attacks with a priori information}, 
   year={2019},
   volume={64},
   number={12},
@@ -15,11 +58,26 @@
   selected={true}
 }
 
+
+@article{2018JCMSI,
+  abbr={SICE JCMSI},
+  author = {Takumi Shinohara and Toru Namerikawa},
+  title = {Reach set-based secure state estimation against sensor attacks with interval hull approximation},
+  journal = {SICE Journal of Control, Measurement, and System Integration},
+  volume = {11},
+  number = {5},
+  pages = {399--408},
+  year = {2018},
+  publisher = {Taylor & Francis},
+  doi = {10.9746/jcmsi.11.399},
+  html = {https://www.tandfonline.com/doi/pdf/10.9746/jcmsi.11.399}
+}
+
 @INPROCEEDINGS{2018ACC,
   abbr={ACC},
   author={Shinohara, Takumi and Namerikawa, Toru},
   booktitle={2018 Annual American Control Conference (ACC)}, 
-  title={Reach Set-based Attack Resilient State Estimation against Omniscient Adversaries}, 
+  title={Reach set-based attack resilient state estimation against omniscient adversaries}, 
   year={2018},
   volume={},
   number={},
@@ -28,10 +86,23 @@
   html={https://ieeexplore.ieee.org/abstract/document/8431213}
 }
 
+@article{2018T-SICE,
+  title={Perfect stealthy attacks in cyber-physical systems},
+  author={Takumi Shinohara and Toru Namerikawa},
+  journal={Transactions of the Society of Instrument and Control Engineers},
+  volume={54},
+  number={3},
+  pages={309--319},
+  year={2018},
+  doi={10.9746/sicetr.54.309},
+  html={https://www.jstage.jst.go.jp/article/sicetr/54/3/54_309/_article/-char/en}
+}
+
+
 @article{2017JCMSI,
   abbr={SICE JCMSI},
   author = {Takumi Shinohara and Toru Namerikawa},
-  title = {On the Vulnerabilities Due to Manipulative Zero-Stealthy Attacks in Cyber-Physical Systems},
+  title = {On the vulnerabilities due to manipulative zero-stealthy attacks in cyber-physical systems},
   journal = {SICE Journal of Control, Measurement, and System Integration},
   volume = {10},
   number = {6},
@@ -55,33 +126,6 @@
   html={https://ieeexplore.ieee.org/abstract/document/8062609}
 }
 
-@article{2022IET-CTA,
-  abbr={IET CTA},
-  author = {Takumi Shinohara and Toru Namerikawa},
-  title = {Distributed Secure State Estimation with a Priori Sparsity Information},
-  journal = {IET Control Theory and Applications},
-  volume = {16},
-  number = {11},
-  pages = {1086--1097},
-  year = {2022},
-  publisher = {Institution of Engineering and Technology},
-  doi = {10.1049/cth2.12287},
-  html = {https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/cth2.12287}
-}
-
-@article{2018JCMSI,
-  abbr={SICE JCMSI},
-  author = {Takumi Shinohara and Toru Namerikawa},
-  title = {Reach Set-Based Secure State Estimation against Sensor Attacks with Interval Hull Approximation},
-  journal = {SICE Journal of Control, Measurement, and System Integration},
-  volume = {11},
-  number = {5},
-  pages = {399--408},
-  year = {2018},
-  publisher = {Taylor & Francis},
-  doi = {10.9746/jcmsi.11.399},
-  html = {https://www.tandfonline.com/doi/pdf/10.9746/jcmsi.11.399}
-}
 
 @INPROCEEDINGS{2016SICE-AC,
   abbr={SICE AC},
@@ -97,7 +141,7 @@
 }
 
 @article{2016T-SICE,
-  title={Detection of Replay Attack on Smart Grid with Code Signal and Bargaining Game},
+  title={Detection of replay attack on smart grid with code signal and bargaining game},
   author={Irita, Takashi and Shinohara, Takumi and Namerikawa, Toru},
   journal={Transactions of the Society of Instrument and Control Engineers},
   volume={52},
@@ -108,43 +152,3 @@
   html={https://www.jstage.jst.go.jp/article/sicetr/52/9/52_498/_article/-char/en}
 }
 
-@article{2024Automatica,
-  abbr={Automatica},
-  title = {Optimal resilient sensor placement problem for secure state estimation},
-  journal = {Automatica},
-  volume = {160},
-  pages = {111454},
-  year = {2024},
-  issn = {0005-1098},
-  doi = {https://doi.org/10.1016/j.automatica.2023.111454},
-  html = {https://www.sciencedirect.com/science/article/pii/S0005109823006210},
-  author = {Takumi Shinohara and Toru Namerikawa},
-  keywords = {Secure state estimation, Optimal sensor placement, Eigenvalue and sparse observability, Polynomial time algorithm},
-  selected={true}
-}
-
-@INPROCEEDINGS{2023ACC,
-  abbr={ACC},  
-  author={Shinohara, Takumi and Namerikawa, Toru},
-  booktitle={2023 American Control Conference (ACC)}, 
-  title={Secure State Estimation for Multi-Agent Systems: On the Relationship between the Number of Agents and System Resilience}, 
-  year={2023},
-  volume={},
-  number={},
-  pages={1006-1011},
-  doi={10.23919/ACC55779.2023.10156420},
-  html={https://ieeexplore.ieee.org/abstract/document/10156420},
-  selected={true}
-}
-
-@article{2018T-SICE,
-  title={Perfect Stealthy Attacks in Cyber-physical Systems},
-  author={Takumi Shinohara and Toru Namerikawa},
-  journal={Transactions of the Society of Instrument and Control Engineers},
-  volume={54},
-  number={3},
-  pages={309--319},
-  year={2018},
-  doi={10.9746/sicetr.54.309},
-  html={https://www.jstage.jst.go.jp/article/sicetr/54/3/54_309/_article/-char/en}
-}
