--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,7 +13,8 @@
   html = {https://www.sciencedirect.com/science/article/pii/S0005109823006210},
   author = {Takumi Shinohara and Toru Namerikawa},
   keywords = {Secure state estimation, Optimal sensor placement, Eigenvalue and sparse observability, Polynomial time algorithm},
-  selected={true}
+  selected={true},
+  kind={Journal Articles}
 }
 
 @INPROCEEDINGS{2023ACC,
@@ -27,7 +28,8 @@
   pages={1006-1011},
   doi={10.23919/ACC55779.2023.10156420},
   html={https://ieeexplore.ieee.org/abstract/document/10156420},
-  selected={true}
+  selected={true},
+  kind={Conference Articles}
 }
 
 @article{2022IET-CTA,
@@ -41,7 +43,8 @@
   year = {2022},
   publisher = {Institution of Engineering and Technology},
   doi = {10.1049/cth2.12287},
-  html = {https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/cth2.12287}
+  html = {https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/cth2.12287},
+  kind={Journal Articles}
 }
 
 @ARTICLE{2019IEEE-TAC,
@@ -55,7 +58,8 @@
   pages={5024--5038},
   doi={10.1109/TAC.2019.2904438},
   html={https://ieeexplore.ieee.org/document/8664617},
-  selected={true}
+  selected={true},
+  kind={Journal Articles}
 }
 
 
@@ -70,7 +74,8 @@
   year = {2018},
   publisher = {Taylor & Francis},
   doi = {10.9746/jcmsi.11.399},
-  html = {https://www.tandfonline.com/doi/pdf/10.9746/jcmsi.11.399}
+  html = {https://www.tandfonline.com/doi/pdf/10.9746/jcmsi.11.399},
+  kind={Journal Articles}
 }
 
 @INPROCEEDINGS{2018ACC,
@@ -83,7 +88,8 @@
   number={},
   pages={5813--5818},
   doi={10.23919/ACC.2018.8431213},
-  html={https://ieeexplore.ieee.org/abstract/document/8431213}
+  html={https://ieeexplore.ieee.org/abstract/document/8431213},
+  kind={Conference Articles}
 }
 
 @article{2018T-SICE,
@@ -95,7 +101,8 @@
   pages={309--319},
   year={2018},
   doi={10.9746/sicetr.54.309},
-  html={https://www.jstage.jst.go.jp/article/sicetr/54/3/54_309/_article/-char/en}
+  html={https://www.jstage.jst.go.jp/article/sicetr/54/3/54_309/_article/-char/en},
+  kind={Journal Articles}
 }
 
 
@@ -110,7 +117,8 @@
   year = {2017},
   publisher = {Taylor & Francis},
   doi = {10.9746/jcmsi.10.563},
-  html = {https://www.tandfonline.com/doi/abs/10.9746/jcmsi.10.563}
+  html = {https://www.tandfonline.com/doi/abs/10.9746/jcmsi.10.563},
+  kind={Journal Articles}
 }
 
 @INPROCEEDINGS{2017CCTA,
@@ -123,7 +131,8 @@
   number={},
   pages={1123--1128},
   doi={10.1109/CCTA.2017.8062609},
-  html={https://ieeexplore.ieee.org/abstract/document/8062609}
+  html={https://ieeexplore.ieee.org/abstract/document/8062609},
+  kind={Conference Articles}
 }
 
 
@@ -137,7 +146,8 @@
   number={},
   pages={1252--1257},
   doi={10.1109/SICE.2016.7749190},
-  html={https://ieeexplore.ieee.org/abstract/document/7749190}
+  html={https://ieeexplore.ieee.org/abstract/document/7749190},
+  kind={Conference Articles}
 }
 
 @article{2016T-SICE,
@@ -149,6 +159,7 @@
   pages={498--506},
   year={2016},
   doi={10.9746/sicetr.52.498},
-  html={https://www.jstage.jst.go.jp/article/sicetr/52/9/52_498/_article/-char/en}
+  html={https://www.jstage.jst.go.jp/article/sicetr/52/9/52_498/_article/-char/en},
+  kind={Journal Articles}
 }
 
