--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -74,7 +74,7 @@
   year = {2018},
   publisher = {Taylor & Francis},
   doi = {10.9746/jcmsi.11.399},
-  html = {https://www.tandfonline.com/doi/pdf/10.9746/jcmsi.11.399},
+  html = {https://www.tandfonline.com/doi/abs/10.9746/jcmsi.11.399},
   kind={Journal Articles}
 }
 
