--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -93,6 +93,7 @@
 }
 
 @article{2018T-SICE,
+  abbr={T.SICE}, 
   title={Perfect stealthy attacks in cyber-physical systems},
   author={Takumi Shinohara and Toru Namerikawa},
   journal={Transactions of the Society of Instrument and Control Engineers},
@@ -151,6 +152,7 @@
 }
 
 @article{2016T-SICE,
+  abbr={T.SICE}, 
   title={Detection of replay attack on smart grid with code signal and bargaining game},
   author={Irita, Takashi and Shinohara, Takumi and Namerikawa, Toru},
   journal={Transactions of the Society of Instrument and Control Engineers},
