--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@
   year = {2024},
   issn = {0005-1098},
   doi = {https://doi.org/10.1016/j.automatica.2023.111454},
+  pdf = {https://www.sciencedirect.com/science/article/pii/S0005109823006210/pdfft?md5=b0883d872546ef87605b0a7a78f290b0&pid=1-s2.0-S0005109823006210-main.pdf},
   html = {https://www.sciencedirect.com/science/article/pii/S0005109823006210},
   author = {Takumi Shinohara and Toru Namerikawa},
   keywords = {Secure state estimation, Optimal sensor placement, Eigenvalue and sparse observability, Polynomial time algorithm},
