--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,6 +28,7 @@
   number={},
   pages={1006-1011},
   doi={10.23919/ACC55779.2023.10156420},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10156420},
   html={https://ieeexplore.ieee.org/abstract/document/10156420},
   selected={true},
   kind={Conference Articles}
@@ -44,6 +45,7 @@
   year = {2022},
   publisher = {Institution of Engineering and Technology},
   doi = {10.1049/cth2.12287},
+  pdf={https://ietresearch.onlinelibrary.wiley.com/doi/epdf/10.1049/cth2.12287},
   html = {https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/cth2.12287},
   kind={Journal Articles}
 }
@@ -58,6 +60,7 @@
   number={12},
   pages={5024--5038},
   doi={10.1109/TAC.2019.2904438},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8664617},
   html={https://ieeexplore.ieee.org/document/8664617},
   selected={true},
   kind={Journal Articles}
@@ -75,6 +78,7 @@
   year = {2018},
   publisher = {Taylor & Francis},
   doi = {10.9746/jcmsi.11.399},
+  pdf={https://www.tandfonline.com/doi/epdf/10.9746/jcmsi.11.399?needAccess=true},
   html = {https://www.tandfonline.com/doi/abs/10.9746/jcmsi.11.399},
   kind={Journal Articles}
 }
@@ -89,6 +93,7 @@
   number={},
   pages={5813--5818},
   doi={10.23919/ACC.2018.8431213},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8431213},
   html={https://ieeexplore.ieee.org/abstract/document/8431213},
   kind={Conference Articles}
 }
@@ -103,6 +108,7 @@
   pages={309--319},
   year={2018},
   doi={10.9746/sicetr.54.309},
+  pdf={https://www.jstage.jst.go.jp/article/sicetr/54/3/54_309/_pdf/-char/en},
   html={https://www.jstage.jst.go.jp/article/sicetr/54/3/54_309/_article/-char/en},
   kind={Journal Articles}
 }
@@ -119,6 +125,7 @@
   year = {2017},
   publisher = {Taylor & Francis},
   doi = {10.9746/jcmsi.10.563},
+  pdf={https://www.tandfonline.com/doi/epdf/10.9746/jcmsi.10.563?needAccess=true},
   html = {https://www.tandfonline.com/doi/abs/10.9746/jcmsi.10.563},
   kind={Journal Articles}
 }
@@ -133,6 +140,7 @@
   number={},
   pages={1123--1128},
   doi={10.1109/CCTA.2017.8062609},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8062609},
   html={https://ieeexplore.ieee.org/abstract/document/8062609},
   kind={Conference Articles}
 }
@@ -148,6 +156,7 @@
   number={},
   pages={1252--1257},
   doi={10.1109/SICE.2016.7749190},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=7749190},
   html={https://ieeexplore.ieee.org/abstract/document/7749190},
   kind={Conference Articles}
 }
@@ -162,6 +171,7 @@
   pages={498--506},
   year={2016},
   doi={10.9746/sicetr.52.498},
+  pdf={https://www.jstage.jst.go.jp/article/sicetr/52/9/52_498/_pdf/-char/en},
   html={https://www.jstage.jst.go.jp/article/sicetr/52/9/52_498/_article/-char/en},
   kind={Journal Articles}
 }
