--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,20 @@
 ---
 ---
+@ARTICLE{2025IEEE-TAC,
+  abbr={IEEE TAC},
+  author={Takumi Shinohara and Toru Namerikawa},
+  journal={IEEE Transactions on Automatic Control}, 
+  title={Optimal security investment problem for secure state estimation on cyber-physical systems}, 
+  year={2025},
+  volume={70},
+  number={2},
+  pages={},
+  doi={},
+  pdf={},
+  html={},
+  selected={true},
+  kind={Journal Articles}
+}
 
 @article{2024Automatica,
   abbr={Automatica},
@@ -52,7 +67,7 @@
 
 @ARTICLE{2019IEEE-TAC,
   abbr={IEEE TAC},
-  author={Shinohara, Takumi and Namerikawa, Toru and Qu, Zhihua},
+  author={Takumi Shinohara, Toru Namerikawa and Zhihua Qu},
   journal={IEEE Transactions on Automatic Control}, 
   title={Resilient reinforcement in secure state estimation against sensor attacks with a priori information}, 
   year={2019},
