--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,13 +5,11 @@
   author={Takumi Shinohara and Toru Namerikawa},
   journal={IEEE Transactions on Automatic Control}, 
   title={Optimal security investment problem for secure state estimation on cyber-physical systems}, 
-  year={2025},
+  year={(accepted, to appear in 2025)},
   volume={70},
   number={2},
   pages={},
   doi={},
-  pdf={},
-  html={},
   selected={true},
   kind={Journal Articles}
 }
