--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @ARTICLE{2025IEEE-TAC,
   abbr={IEEE TAC},
-  author={Takumi Shinohara and Toru Namerikawa},
+  author={Shinohara, Takumi, and Namerikawa, Toru},
   journal={IEEE Transactions on Automatic Control}, 
   title={Optimal security investment problem for secure state estimation on cyber-physical systems}, 
   year={(accepted, to appear in 2025)},
@@ -10,6 +10,8 @@
   number={2},
   pages={},
   doi={},
+  pdf = {},
+  html = {},
   selected={true},
   kind={Journal Articles}
 }
@@ -65,7 +67,7 @@
 
 @ARTICLE{2019IEEE-TAC,
   abbr={IEEE TAC},
-  author={Takumi Shinohara, Toru Namerikawa and Zhihua Qu},
+  author={Shinohara, Takumi and Namerikawa, Toru, and Qu, Zhihua},
   journal={IEEE Transactions on Automatic Control}, 
   title={Resilient reinforcement in secure state estimation against sensor attacks with a priori information}, 
   year={2019},
