--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,11 @@
 ---
 ---
-@ARTICLE{2025IEEE-TAC,
+@article{2025IEEE-TAC,
   abbr={IEEE TAC},
-  author={Shinohara, Takumi, and Namerikawa, Toru},
+  author={Takumi Shinohara and Toru Namerikawa},
   journal={IEEE Transactions on Automatic Control}, 
   title={Optimal security investment problem for secure state estimation on cyber-physical systems}, 
-  year={(accepted, to appear in 2025)},
+  year={2025 (accepted)},
   volume={70},
   number={2},
   pages={},
@@ -33,9 +33,9 @@
   kind={Journal Articles}
 }
 
-@INPROCEEDINGS{2023ACC,
+@inproceedings{2023ACC,
   abbr={ACC},  
-  author={Shinohara, Takumi and Namerikawa, Toru},
+  author={Takumi Shinohara and Toru Namerikawa},
   booktitle={2023 American Control Conference (ACC)}, 
   title={Secure state estimation for multi-agent systems: On the relationship between the number of agents and system resilience}, 
   year={2023},
@@ -65,9 +65,9 @@
   kind={Journal Articles}
 }
 
-@ARTICLE{2019IEEE-TAC,
+@article{2019IEEE-TAC,
   abbr={IEEE TAC},
-  author={Shinohara, Takumi and Namerikawa, Toru, and Qu, Zhihua},
+  author={Takumi Shinohara, Toru Namerikawa, and Zhihua Qu},
   journal={IEEE Transactions on Automatic Control}, 
   title={Resilient reinforcement in secure state estimation against sensor attacks with a priori information}, 
   year={2019},
@@ -98,9 +98,9 @@
   kind={Journal Articles}
 }
 
-@INPROCEEDINGS{2018ACC,
+@inproceedings{2018ACC,
   abbr={ACC},
-  author={Shinohara, Takumi and Namerikawa, Toru},
+  author={Takumi Shinohara and Toru Namerikawa},
   booktitle={2018 Annual American Control Conference (ACC)}, 
   title={Reach set-based attack resilient state estimation against omniscient adversaries}, 
   year={2018},
@@ -145,9 +145,9 @@
   kind={Journal Articles}
 }
 
-@INPROCEEDINGS{2017CCTA,
+@inproceedings{2017CCTA,
   abbr={IEEE CCTA},
-  author={Shinohara, Takumi and Namerikawa, Toru},
+  author={Takumi Shinohara and Toru Namerikawa},
   booktitle={2017 IEEE Conference on Control Technology and Applications (CCTA)}, 
   title={Manipulative zero-stealthy attacks in cyber-physical systems: Existence space of feasible attack objectives}, 
   year={2017},
@@ -161,9 +161,9 @@
 }
 
 
-@INPROCEEDINGS{2016SICE-AC,
+@inproceedings{2016SICE-AC,
   abbr={SICE AC},
-  author={Shinohara, Takumi and Namerikawa, Toru},
+  author={Takumi Shinohara and Toru Namerikawa},
   booktitle={2016 55th Annual Conference of the Society of Instrument and Control Engineers of Japan (SICE)}, 
   title={SLAM for a small UAV with compensation for unordinary observations and convergence analysis}, 
   year={2016},
