--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
   author={Takumi Shinohara and Toru Namerikawa},
   journal={IEEE Transactions on Automatic Control}, 
   title={Optimal security investment problem for secure state estimation on cyber-physical systems}, 
-  year={2025 (accepted)},
+  year={2025},
   volume={70},
   number={2},
   pages={},
@@ -67,7 +67,7 @@
 
 @article{2019IEEE-TAC,
   abbr={IEEE TAC},
-  author={Takumi Shinohara, Toru Namerikawa, and Zhihua Qu},
+  author={Shinohara, Takumi and Namerikawa, Toru and Qu, Zhihua},
   journal={IEEE Transactions on Automatic Control}, 
   title={Resilient reinforcement in secure state estimation against sensor attacks with a priori information}, 
   year={2019},
