--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,9 +9,9 @@
   volume={70},
   number={2},
   pages={},
-  doi={},
-  pdf = {},
-  html = {},
+  doi={https://doi.org/10.1109/TAC.2024.3451216},
+  pdf = {https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10654507},
+  html = {https://ieeexplore.ieee.org/document/10654507},
   selected={true},
   kind={Journal Articles}
 }
