--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,20 @@
 ---
 ---
+@inproceedings{2024IFAC-CPHS,
+  abbr={IFAC-CPHS},  
+  author={Takumi Shinohara and Toru Namerikawa},
+  booktitle={5th IFAC Workshop on Cyber-Physical Human Systems}, 
+  title={Security measure implementation for distributed state estimation}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={},
+  doi={},
+  pdf={},
+  html={},
+  kind={Conference Articles}
+}
+
 @article{2025IEEE-TAC,
   abbr={IEEE TAC},
   author={Takumi Shinohara and Toru Namerikawa},
