--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,20 +1,5 @@
 ---
 ---
-@inproceedings{2024IFAC-CPHS,
-  abbr={IFAC-CPHS},  
-  author={Takumi Shinohara and Toru Namerikawa},
-  booktitle={5th IFAC Workshop on Cyber-Physical Human Systems}, 
-  title={Security measure implementation for distributed state estimation}, 
-  year={2024},
-  volume={58},
-  number={30},
-  pages={308--313},
-  doi={https://doi.org/10.1016/j.ifacol.2025.01.199},
-  pdf={https://www.sciencedirect.com/science/article/pii/S2405896325001995/pdf?md5=ee294d793264b3e4bdabc5f5733d61dd&pid=1-s2.0-S2405896325001995-main.pdf},
-  html={https://www.sciencedirect.com/science/article/pii/S2405896325001995},
-  kind={Conference Articles}
-}
-
 @article{2025IEEE-TAC,
   abbr={IEEE TAC},
   author={Takumi Shinohara and Toru Namerikawa},
@@ -29,6 +14,22 @@
   html = {https://ieeexplore.ieee.org/document/10654507},
   selected={true},
   kind={Journal Articles}
+}
+
+@inproceedings{2024IFAC-CPHS,
+  abbr={IFAC-CPHS},  
+  author={Takumi Shinohara and Toru Namerikawa},
+  booktitle={5th IFAC Workshop on Cyber-Physical Human Systems}, 
+  title={Security measure implementation for distributed state estimation}, 
+  year={2024},
+  volume={58},
+  number={30},
+  pages={308--313},
+  doi={https://doi.org/10.1016/j.ifacol.2025.01.199},
+  pdf={https://www.sciencedirect.com/science/article/pii/S2405896325001995/pdf?md5=ee294d793264b3e4bdabc5f5733d61dd&pid=1-s2.0-S2405896325001995-main.pdf},
+  html={https://www.sciencedirect.com/science/article/pii/S2405896325001995},
+  selected={true},
+  kind={Conference Articles}
 }
 
 @article{2024Automatica,
